5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/3995/executions/1756_1189.log
== TEST (2019-05-27 15:10:29) 
-- CODE:
v=input("qualquer:").upper()
i=-1
while(i<-len(v)):
	v=v+v[i]
print(v)
-- OUTPUT:
ACARARAJADADAJARARACA
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 15:10:42) 
-- CODE:
v=input("qualquer:").upper()
i=-1
while(i<-len(v)):
	v=v+v[i]
print(v)
-- OUTPUT:
ACARARAJADADAJARARACA
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 15:10:47) 
-- CODE:
v=input("qualquer:").upper()
i=-1
while(i<-len(v)):
	v=v+v[i]
print(v)
-- OUTPUT:
ACARARAJADADAJARARACA
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 15:11:03) 
-- CODE:
v=input("qualquer:").upper()
i=-1
while(i<-len(v)):
	v=v+v[i]
print(v)
-- OUTPUT:
ACARARAJADADAJARARACA
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 15:11:16) 
-- CODE:
v=input("qualquer:").upper()
i=0
while(i<-len(v)):
	v=v+v[i]
print(v)
-- OUTPUT:
ACARARAJADADAJARARACA
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 15:11:22) 
-- CODE:
v=input("qualquer:").upper()
i=0
while(i<-len(v)):
	v=v+v[i]
print(v)
-- OUTPUT:
ACARARAJADADAJARARACA
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 15:17:06) 
-- CODE:
v=input("qualquer:")
i=-1
n=""
while(i>=-len(v)):
	n=n+v[i]
	i=i-1
print(n)
-- OUTPUT:
ACARARAJADADAJARARACA
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 15:17:28) 
-- CODE:
v=input("qualquer:")
i=-1
n=""
while(i>=-len(v)):
	n=n+v[i]
	i=i-1
print(replace(n))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    print(replace(n))
NameError: name 'replace' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 15:18:08) 
-- CODE:
v=input("qualquer:")
i=-1
n=""
while(i>=-len(v)):
	n=n+v[i]
	i=i-1
print(n)
-- OUTPUT:
ACARARAJADADAJARARACA
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 15:18:24) 
-- CODE:
v=input("qualquer:")
i=-1
n=replace("")
while(i>=-len(v)):
	n=n+v[i]
	i=i-1
print(n)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    n=replace("")
NameError: name 'replace' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 15:18:48) 
-- CODE:
from numpy import*
v=input("qualquer:")
i=-1
n=replace("")
while(i>=-len(v)):
	n=n+v[i]
	i=i-1
print(n)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 15:20:03) 
-- CODE:

v=input("qualquer:")
i=-1
n=""
while(i>=-len(v)):
	n=n+v[i]
	i=i-1
print(n)
if
-- ERROR:
File "XXXX", line 9
    if
     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 15:21:04) 
-- CODE:

v=input("qualquer:")
i=-1
n="".replace
while(i>=-len(v)):
	n=n+v[i]
	i=i-1
print(n)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    n=n+v[i]
TypeError: unsupported operand type(s) for +: 'builtin_function_or_method' and 'str'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 15:21:14) 
-- CODE:

v=input("qualquer:")
i=-1
n="".replace
while(i>=-len(v)):
	n=n+v[i]
	i=i-1
print(n)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    n=n+v[i]
TypeError: unsupported operand type(s) for +: 'builtin_function_or_method' and 'str'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 15:21:19) 
-- CODE:

v=input("qualquer:")
i=-1
n="".replace()
while(i>=-len(v)):
	n=n+v[i]
	i=i-1
print(n)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    n="".replace()
TypeError: replace() takes at least 2 arguments (0 given)
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 15:21:36) 
-- CODE:

v=input("qualquer:")
i=-1
n=""
while(i>=-len(v)):
	n=n+v[i]
	i=i-1
print(n.replace())

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    print(n.replace())
TypeError: replace() takes at least 2 arguments (0 given)
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 15:22:21) 
-- CODE:

v=input("qualquer:")
i=-1
n=""
while(i>=-len(v)):
	n=(n+v[i]).replace()
	i=i-1
print(n)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    n=(n+v[i]).replace()
TypeError: replace() takes at least 2 arguments (0 given)
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 15:22:40) 
-- CODE:

v=input("qualquer:")
i=-1
n=""
while(i>=-len(v)):
	n=(n.replace+v[i])
	i=i-1
print(n)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    n=(n.replace+v[i])
TypeError: unsupported operand type(s) for +: 'builtin_function_or_method' and 'str'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 15:22:43) 
-- CODE:

v=input("qualquer:")
i=-1
n=""
while(i>=-len(v)):
	n=(n.replace(+v[i])
	i=i-1
print(n)

-- ERROR:
File "XXXX", line 7
    i=i-1
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 15:22:46) 
-- CODE:

v=input("qualquer:")
i=-1
n=""
while(i>=-len(v)):
	n=(n.replace()+v[i])
	i=i-1
print(n)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    n=(n.replace()+v[i])
TypeError: replace() takes at least 2 arguments (0 given)
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 15:22:51) 
-- CODE:

v=input("qualquer:")
i=-1
n=""
while(i>=-len(v)):
	n=n.replace()+v[i]
	i=i-1
print(n)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    n=n.replace()+v[i]
TypeError: replace() takes at least 2 arguments (0 given)
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 15:23:17) 
-- CODE:

v=input("qualquer:")
i=-1
n=""
while(i>=-len(v)):
	n.replace()=n+v[i]
	i=i-1
print(n)

-- ERROR:
File "XXXX", line 6
    n.replace()=n+v[i]
    ^
SyntaxError: can't assign to function call
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 15:23:24) 
-- CODE:

v=input("qualquer:")
i=-1
n=""
while(i>=-len(v)):
	n=n+v[i]
	i=i-1
print(n)

-- OUTPUT:
ACARARAJADADAJARARACA
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 15:23:29) 
-- CODE:

v=input("qualquer:")
i=-1
n=""
while(i>=-len(v)):
	n=n+v[i]
	i=i-1
print(n)

-- OUTPUT:
ACARARAJADADAJARARACA
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 15:24:08) 
-- CODE:

v=input("qualquer:")
i=-1
n=""
while(i>=-len(v)):
	n=n+v[i]
	i=i-1
print(n)
if(n==-v):
	print(1)
else:
	print(0)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    if(n==-v):
TypeError: bad operand type for unary -: 'str'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 15:25:30) 
-- CODE:

v=input("qualquer:")
i=-1
n=""
while(i>=-len(v)):
	n=n+v[i]
	i=i-1
print(n)
if(n!=-v):
	print(0)
else:
	print(1)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    if(n!=-v):
TypeError: bad operand type for unary -: 'str'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 15:25:52) 
-- CODE:

v=str(input("qualquer:"))
i=-1
n=""
while(i>=-len(v)):
	n=n+v[i]
	i=i-1
print(n)
if(n!=-v):
	print(0)
else:
	print(1)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    if(n!=-v):
TypeError: bad operand type for unary -: 'str'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 15:25:56) 
-- CODE:

v=str(input("qualquer:"))
i=-1
n=""
while(i>=-len(v)):
	n=n+v[i]
	i=i-1
print(n)
if(n!=-v):
	print(0)
else:
	print(1)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    if(n!=-v):
TypeError: bad operand type for unary -: 'str'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 15:26:08) 
-- CODE:

v=str(input("qualquer:"))
i=-1
n=""
while(i>=-len(v)):
	n=n+v[i]
	i=i-1
print(n)
if(str(n)!=str(-v)):
	print(0)
else:
	print(1)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    if(str(n)!=str(-v)):
TypeError: bad operand type for unary -: 'str'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 15:32:08) 
-- CODE:

v=input("qualquer:")
v=v.replace(' ','')
c=0
i=-1
j=1
n=""
while(i>=-len(v)):
	n=n+v[i]
	if(v[c]!=v[i]):
		j=0
	c=c+1
	i=i-1
print(v)
print(j)
-- OUTPUT:
ACARARAJADADAJARARACA
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 15:32:16) 
-- CODE:

v=input("qualquer:")
v=v.replace(' ','')
c=0
i=-1
j=1
n=""
while(i>=-len(v)):
	n=n+v[i]
	if(v[c]!=v[i]):
		j=0
	c=c+1
	i=i-1
print(v)
print(j)
-- OUTPUT:
ACARARAJADADAJARARACA
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 15:32:37) 
-- CODE:

v=input("qualquer:").upper()
v=v.replace(' ','')
c=0
i=-1
j=1
n=""
while(i>=-len(v)):
	n=n+v[i]
	if(v[c]!=v[i]):
		j=0
	c=c+1
	i=i-1
print(v)
print(j)
-- OUTPUT:
ACARARAJADADAJARARACA
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 15:33:02) 
-- CODE:

v=input("qualquer:")
v=v.replace(' ','')
c=0
i=-1
j=1
n=""
while(i>=-len(v)):
	n=n+v[i]
	if(v[c]!=v[i]):
		j=0
	c=c+1
	i=i-1
print(v.upper())
print(j)
-- OUTPUT:
ACARARAJADADAJARARACA
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-27 15:33:11) 
-- CODE:

v=input("qualquer:")
v=v.replace(' ','')
c=0
i=-1
j=1
n=""
while(i>=-len(v)):
	n=n+v[i]
	if(v[c]!=v[i]):
		j=0
	c=c+1
	i=i-1
print(v.upper())
print(j)
-- EXECUTION TIME:
0.201993
-- TEST CASE 1:
---- input:
ACARARAJADADAJARARACA
---- correct output:
ACARARAJADADAJARARACA
1
---- user output:
ACARARAJADADAJARARACA
1
-- TEST CASE 2:
---- input:
CACHORRO
---- correct output:
CACHORRO
0
---- user output:
CACHORRO
0
-- TEST CASE 3:
---- input:
amalanadanalama
---- correct output:
AMALANADANALAMA
1
---- user output:
AMALANADANALAMA
1
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 15:47:35) 
-- CODE:
v=input("qualquer:")
v=v.replace(' ','')
c=0
i=-1
j=1
n=""
while(i>=-len(v)):
	n=n+v[i]
	if(v[c]!=v[i]):
		j=0
	c=c+1
	i=i-1
print(n.upper())
print(j)
-- OUTPUT:
ACARARAJADADAJARARACA
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-27 15:47:41) 
-- CODE:
v=input("qualquer:")
v=v.replace(' ','')
c=0
i=-1
j=1
n=""
while(i>=-len(v)):
	n=n+v[i]
	if(v[c]!=v[i]):
		j=0
	c=c+1
	i=i-1
print(n.upper())
print(j)
-- EXECUTION TIME:
0.203826
-- TEST CASE 1:
---- input:
ACARARAJADADAJARARACA
---- correct output:
ACARARAJADADAJARARACA
1
---- user output:
ACARARAJADADAJARARACA
1
-- TEST CASE 2:
---- input:
CACHORRO
---- correct output:
CACHORRO
0
---- user output:
ORROHCAC
0
-- TEST CASE 3:
---- input:
amalanadanalama
---- correct output:
AMALANADANALAMA
1
---- user output:
AMALANADANALAMA
1
-- GRADE:
67%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 15:48:21) 
-- CODE:
v=input("qualquer:")
v=v.replace(' ','')
c=0
i=-1
j=1
n=""
while(i>=-len(v)):
	n=n+v[i]
	if(v[c]!=v[i]):
		j=0
	c=c+1
	i=i-1
print(v.upper())
print(j)
-- OUTPUT:
ACARARAJADADAJARARACA
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-27 15:48:23) 
-- CODE:
v=input("qualquer:")
v=v.replace(' ','')
c=0
i=-1
j=1
n=""
while(i>=-len(v)):
	n=n+v[i]
	if(v[c]!=v[i]):
		j=0
	c=c+1
	i=i-1
print(v.upper())
print(j)
-- EXECUTION TIME:
0.149826
-- TEST CASE 1:
---- input:
ACARARAJADADAJARARACA
---- correct output:
ACARARAJADADAJARARACA
1
---- user output:
ACARARAJADADAJARARACA
1
-- TEST CASE 2:
---- input:
CACHORRO
---- correct output:
CACHORRO
0
---- user output:
CACHORRO
0
-- TEST CASE 3:
---- input:
amalanadanalama
---- correct output:
AMALANADANALAMA
1
---- user output:
AMALANADANALAMA
1
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
